--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,33 +1,30 @@
 ---
 galaxy_info:
+  author: Michael Buluma
   role_name: victoriametrics_cluster
   namespace: buluma
-  author: Michael Buluma
   description: Ansible role for installing and configuring victoriametrics cluster
-  license: "Apache-2.0"
-  min_ansible_version: 2.9
+  license: "Apache License, Version 2.0"
+  min_ansible_version: 2.8
+
   platforms:
-    - name: Debian
+    - name: "Ubuntu"
       versions:
         - all
-    - name: Fedora
+    - name: "Debian"
       versions:
         - all
-    - name: EL
+    - name: "RedHat"
       versions:
         - all
-    - name: Ubuntu
+    - name: "EL"
       versions:
-        - focal
-        - bionic
+        - all
+
   galaxy_tags:
-    - system
-    - network
-    - linux
-    - monitoring
-    - prometheus
-    - node
-    - exporter
+    - vmutils
     - victoriametrics
-    - victoriametricscluster
+    - prometheus
+    - monitoring
+
 dependencies: []
