--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,44 +1,22 @@
 ---
-- name: gather facts
-  setup:
+### Checks
+- name: Import check tasks
+  import_tasks: check.yml
 
-- name: Ensure vm_role for node is set
-  assert:
-    fail_msg: "Make sure to set 'vm_role', allowed values are: 'victoria-insert', 'victoria-select', 'victoria-storage"
-    that:
-      - vm_role is defined
-      - vm_role in ['victoria-insert', 'victoria-select', 'victoria-storage']
+### Import vars
+- name: add OS specific variables
+  include_vars: '{{ vars_file }}'
+  with_first_found:
+    - files:
+        - '{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml'
+        - '{{ ansible_distribution }}.yml'
+        - '{{ ansible_os_family }}.yml'
+        - 'main.yml'
+      paths:
+        - 'vars'
+  loop_control:
+    loop_var: vars_file
 
-- name: Create data directory
-  file:
-    state: directory
-    path: "{{ item }}"
-    owner: root
-    group: root
-    mode: 0755
-  with_items:
-    - "{{ vmstorage_host_path }}"
-    - "{{ vm_conf_host_path }}"
-
-- name: "ensure {{ vm_role }} unit file"
-  notify: "restart service {{ vm_role }}"
-  template:
-    src: "{{ vm_role }}.service.j2"
-    dest: "/etc/systemd/system/{{ vm_role }}.service"
-
-- name: "ensure {{ vm_role }} environment_file"
-  template:
-    src: vm_environment.j2
-    dest: "{{ environment_file_path }}/{{ vm_role }}"
-  notify: "restart service {{ vm_role }}"
-  when: use_environment != false
-
-- name: Execute handlers
-  meta: flush_handlers
-
-- name: start services
-  systemd:
-    name: "{{ vm_role }}"
-    daemon_reload: yes
-    enabled: yes
-    state: started
+### Install
+- name: Import install tasks
+  import_tasks: install.yml
