--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,19 +1,19 @@
 # handlers file for VictoriaMetrics
 ---
 - name: Restart victoriametrics-vminsert service
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
     name: victoriametrics-vminsert
     state: restarted
 
 - name: Restart victoriametrics-vmselect service
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
     name: victoriametrics-vmselect
     state: restarted
 
 - name: Restart victoriametrics-storage service
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
     name: victoriametrics-storage
     state: restarted
