--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -11,11 +11,11 @@
   tasks:
     ### INCLUDE META
     - name: Include roles' meta data
-      include_vars:
+      ansible.builtin.include_vars:
         file: "../../meta/main.yml"
     ### TEST DISTRIB
     - name: Test the distribution is supported. End the host if not.
-      set_fact:
+      ansible.builtin.set_fact:
         supported_distributions: "{{ galaxy_info.platforms|json_query('[].name') }}"
     - block:
         - name: Ending play...
@@ -23,7 +23,7 @@
       when: ansible_distribution not in supported_distributions
     ### TEST RELEASE
     - name: Test the release is supported. End the host if not.
-      set_fact:
+      ansible.builtin.set_fact:
         supported_releases: "{{ (galaxy_info.platforms| selectattr('name', 'match', ansible_distribution)| list|first).versions }}"
     - block:
         - name: Ending play...
@@ -32,24 +32,24 @@
 
     ### Install
     - name: Install ca-certificates
-      package:
+      ansible.builtin.package:
         name: ca-certificates
         state: present
 
     - name: Download and install Goss
-      get_url:
+      ansible.builtin.get_url:
         url: "https://github.com/aelsabbahy/goss/releases/download/{{ goss_version }}/goss-linux-{{ goss_arch }}"
         dest: "{{ goss_bin }}"
         mode: 0755
 
     - name: Create Molecule directory for test files
-      file:
+      ansible.builtin.file:
         path: "{{ goss_test_directory }}"
         state: directory
         mode: '0755'
 
     - name: Find Goss tests on localhost
-      find:
+      ansible.builtin.find:
         paths: "{{ lookup('env', 'MOLECULE_VERIFIER_TEST_DIRECTORY') }}"
         patterns:
           - "test[-.\\w]*.yml"
@@ -63,12 +63,12 @@
       become: false
 
     - name: debug
-      debug:
+      ansible.builtin.debug:
         msg: "{{ test_files.files }}"
         verbosity: 3
 
     - name: Copy Goss tests to remote
-      copy:
+      ansible.builtin.copy:
         src: "{{ item.path }}"
         dest: "{{ goss_test_directory }}/{{ item.path | basename }}"
         mode: '0644'
@@ -88,12 +88,12 @@
       changed_when: false
 
     - name: Display details about the Goss results
-      debug:
+      ansible.builtin.debug:
         msg: "{{ item.stdout_lines }}"
       with_items: "{{ test_results.results }}"
 
     - name: Fail when tests fail
-      fail:
+      ansible.builtin.fail:
         msg: "Goss failed to validate"
       when: item.rc != 0
       with_items: "{{ test_results.results }}"
