--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@
 galaxy_info:
   author: buluma
   namespace: buluma
+  role_name: victoriametrics_cluster
   description: Role for installing VictoriaMetrics Cluster
   license: Apache-2.0
   min_ansible_version: "2.4"
