--- a/tasks/preinstall.yml
+++ b/tasks/preinstall.yml
@@ -74,7 +74,7 @@
   with_items: "{{ custom_sysctl }}"
   when: custom_sysctl is defined
   notify:
-    - reload sysctl.conf
+    - Reload sysctl.conf
 
 - name: Create VictoriaMetrics system group
   ansible.builtin.group:
