--- a/tasks/preinstall.yml
+++ b/tasks/preinstall.yml
@@ -93,7 +93,7 @@
     createhome: false
   when: victoriametrics_system_user != "root"
 
-- name: configure /etc/security/limits.conf for {{ victoriametrics_system_user }} user
+- name: Configure /etc/security/limits.conf for {{ victoriametrics_system_user }} user
   community.general.pam_limits:
     domain: "{{ victoriametrics_system_user }}"
     limit_type: "{{ item.limit_type }}"
